# switchbot-visualizer

api/: samconfig.toml  template.yaml
api/handlers/webhook/: app.ts  config.ts  package.json  pnpm-lock.yaml  timestream.ts  type.ts
api/rust_app/: Cargo.toml
api/rust_app/src/: app_module.rs  config.rs  main.rs  models.rs  routes.rs  services.rs  usecases.rs
api/rust_app/src/models/: switchbot_api.rs
api/rust_app/src/routes/: device.rs
api/rust_app/src/services/: switchbot_api.rs
api/rust_app/src/usecases/: device.rs  health.rs
