[package]
name = "switchbot_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.9", features = ["macros"] }
axum-aws-lambda = "0.9.0"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
dotenvy = "0.15.7"
lambda_http = "0.13.0"
tokio = { version = "1.40.0", features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["full"] }
tracing = { version = "0.1.26", features = ["log"] }
tracing-subscriber = { version = "0.3.7", default-features = false, features = ["fmt"] }
serde = "1.0.136"
envy = "0.4.2"
thiserror = "2.0.6"
reqwest = { version = "0.12.9", features = ["json"] }
hmac = "0.12.1"
sha2 = "0.10.8"
uuid = { version = "1.11.0", features = ["v7"] }
base64 = "0.22.1"
serde_json = "1.0.133"
